<resources>
    <string name="app_name">Calculator</string>

    <string name="user_input_placeholder">2 + (5 * 6) ^ 10</string>
    <string name="user_output_placeholder">0</string>

    <string name="clear">C</string>
    <string name="open_paren">(</string>
    <string name="close_paren">)</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>

    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="exponent">^</string>

    <string name="clear_title">delete all</string>
    <string name="backspace_title">Del</string>
    <string name="exponent_title">x<sup>y</sup></string>
    <string name="open_paren_title">open parentheses</string>
    <string name="close_paren_title">close parentheses</string>

    <string name="zero_title">zero</string>
    <string name="one_title">one</string>
    <string name="two_title">two</string>
    <string name="three_title">three</string>
    <string name="four_title">four</string>
    <string name="five_title">five</string>
    <string name="six_title">six</string>
    <string name="seven_title">seven</string>
    <string name="eight_title">eight</string>
    <string name="nine_title">nine</string>
    <string name="point_title">point</string>

    <string name="divide_title">divide</string>
    <string name="multiply_title">multiply</string>
    <string name="minus_title">minus</string>
    <string name="plus_title">plus</string>
    <string name="equals_title">equals</string>

    <string name="was_clicked">was clicked</string>

    <string name="error">Error: Incomplete expression</string>

    <string name="cant_divide_by_zero">Can\'t be divide by zero</string>
    <string name="backspace">Del</string>

    <string name="enter_expression">Enter Expression...</string>

</resources>