<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:id="@+id/first_row">

    <TextView
        android:id="@+id/one"
        android:text="@string/one"
        android:textColor="@color/text_light"
        android:background="@drawable/rounded_button_operand"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/two"
        android:text="@string/two"
        android:textColor="@color/text_light"
        android:background="@drawable/rounded_button_operand"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/three"
        android:text="@string/three"
        android:textColor="@color/text_light"
        android:background="@drawable/rounded_button_operand"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/plus"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_operator"
        style="@style/ButtonStyle"
        />

</LinearLayout>