<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_row">

        <TextView
            android:id="@+id/seven"
            android:text="@string/seven"
            android:textColor="@color/text_light"
            android:background="@drawable/rounded_button_operand"
            style="@style/ButtonStyle"
            />

        <TextView
            android:id="@+id/eight"
            android:text="@string/eight"
            android:textColor="@color/text_light"
            android:background="@drawable/rounded_button_operand"
            style="@style/ButtonStyle"
            />

        <TextView
            android:id="@+id/nine"
            android:text="@string/nine"
            android:textColor="@color/text_light"
            android:background="@drawable/rounded_button_operand"
            style="@style/ButtonStyle"
            />

        <TextView
            android:id="@+id/multiply"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_operator"
            style="@style/ButtonStyle"
            />

    </LinearLayout>

</layout>
