<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:id="@+id/first_row">

    <TextView
        android:id="@+id/delete_all"
        android:text="@string/delete_all"
        android:textColor="@color/delete_txt_light"
        android:background="@drawable/rounded_button_delete"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/open_paren"
        android:text="@string/open_paren"
        android:textColor="@color/text_light"
        android:background="@drawable/rounded_button_operand"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/close_paren"
        android:text="@string/close_paren"
        android:textColor="@color/text_light"
        android:background="@drawable/rounded_button_operand"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/divide"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_operator"
        style="@style/ButtonStyle"
        />

</LinearLayout>